--- a/pages/news.html
+++ b/pages/news.html
@@ -3,7 +3,6 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/reset.css">
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<link rel="stylesheet" type="text/css" href="../css/font.css">
 		<title> Lecture 3</title>
 	</head>
 	<body>
@@ -80,19 +79,16 @@
 		<!-- article 3 end -->
 
 
-		<article class="maps-container">
-			<div class="flex-center">		 
-				<h1 class="info">საკონტაქტო ინფორმაცია</h1>
-			    <p class="paragrap-bold">მისამართი: <span class="details">პეტრიაშვილის ქ.30</span></p>
-		     	<p class="paragrap-bold">ტელ: <span class="details">589898985</span></p>
-		    	<p class="paragrap-bold">ელ.ფოსტა: <span class="details">exampl@gmail.com</span></p>
-			</div>
+		
 
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.335239971768!2d44.71998814370773!3d41.71328432958583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044736596c27405%3A0xe09a53006d388493!2zNTYg4YOs4YOn4YOc4YOU4YOX4YOY4YOhIOGDkuGDluGDkOGDouGDmeGDlOGDquGDmOGDmuGDmCwgVCdiaWxpc2k!5e0!3m2!1sen!2sge!4v1669744539953!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 
 		</article>
+		<footer class="container">
+			<img src="../images/fb.svg" alt="fb" class="image-footer">
+			<img src="../images/yt.svg" alt="yt" class="image-footer">
+		</footer>
 
 
 	</body>
