--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,8 +11,8 @@
                 <img src="../images/logo.svg" alt="logo">
                 </a>
                 <a class="nav-a" href="../index.html">მთავარი</a>
-                <a class="nav-a" href="#">სიახლეები</a>
-                <a class="nav-a-active" href="../pages/contact.html">კონტაქტი</a>
+                <a class="nav-a" href="../pages/news.html">სიახლეები</a>
+                <a class="nav-a-active" href="#">კონტაქტი</a>
             </div>
         </header>
         <article class="maps-container"> 
@@ -28,9 +28,9 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.335239971768!2d44.71998814370773!3d41.71328432958583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044736596c27405%3A0xe09a53006d388493!2zNTYg4YOs4YOn4YOc4YOU4YOX4YOY4YOhIOGDkuGDluGDkOGDouGDmeGDlOGDquGDmOGDmuGDmCwgVCdiaWxpc2k!5e0!3m2!1sen!2sge!4v1669744539953!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe-details"</iframe>
 </div>
 </article>
-        <footer class="container">
-			<img src="../images/fb.svg" alt="fb" class="image-footer">
-			<img src="../images/yt.svg" alt="yt" class="image-footer">
-		</footer>
+<footer class="container">
+    <img src="../images/fb.svg" alt="fb" class="image-footer">
+    <img src="../images/yt.svg" alt="yt" class="image-footer">
+</footer>
     </body>
 </html>
